<resources>
    <string name="app_name">Andromot</string>

    <string name="open">Open navigation drawer</string>
    <string name="close">Close navigation drawer</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="hello_blank_fragment">hello_blank_fragment</string>

    //this strings required for recylerView....
    <string name="crop_image">crop image</string>
    <string name="device_name">Device Name :</string>
    <string name="crop_name">Crop Name :</string>
    <string name="product_image">Product Image</string>
    <string name="product_name">Product Name</string>
    <string name="addcropimage">addCropImage</string>
    <string name="crop_description">Crop Description</string>
    <string name="add_client_image">Add Client Image</string>
    <string name="client_name">Client Name</string>
    <string name="description">Description :</string>
    <string name="client_description">Client Description</string>
    <string name="server_image">Server Image</string>
    <string name="server_name">Server Name</string>
    <string name="server_description">Server Description</string>
    <string name="product_id">Product Id :</string>
    <string name="product_ids">Product Id</string>
    <string name="customer_name">Customer Name</string>
    <string name="service_id">Service Id</string>
    <string name="status_on_of">Status :</string>
    <string name="device_modal_status">Device Modal Status :</string>
    <string name="back_button_image">Back Button Image</string>
    <string name="add_crop">Add Crop :</string>
    <string name="refresh_icon">Refresh Icon</string>


    //
    <string name="OpenDrawer">Open Navigation Drawer</string>
    <string name="CloseDrawer">Close Navigation Drawer</string>
    <string name="profile">Profile</string>
    <string name="sensor_list">Sensor List</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="home">home</string>
    <string name="add_crop1">Add Crop</string>
    <string name="status">Status</string>
    <string name="current_corp">Current Corp</string>
    <string name="notification">Notification</string>
    <string name="ig">ig</string>
    <string name="water_level_n_amp_nnpk_detai"><![CDATA[Water Level\n & \nNPK Detai]]></string>
    <string name="bell">bell</string>
    <string name="npk">NPK</string>
    <string name="crop_suggestion">Crop Suggestion</string>
    <string name="plant_requisite">Plant Requisite</string>
    <string name="device_model_status">Device Model Status :</string>
    <string name="sensor_id">Sensor Id</string>
</resources>