<?xml version="1.0" encoding="utf-8"?>

<!--This layout made for severs recycler view-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginBottom="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/servers_card"
        app:cardElevation="7dp"
        app:contentPadding="11dp"
        app:cardCornerRadius="7dp"
        >

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:id="@+id/cropImageSr"
            android:layout_gravity="start"
            android:src="@drawable/server"
            android:scaleType="centerCrop"
            android:contentDescription="@string/server_image"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/tvServerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/server_name"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginStart="65dp"
                android:layout_marginTop="11dp"
                android:layout_marginBottom="11dp"
                />

            <TextView
                android:id="@+id/tvDescriptionSr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginStart="65dp"
                android:layout_marginBottom="11dp"
                />

            <TextView
                android:id="@+id/tvServerDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/server_description"
                android:textSize="14sp"
                android:textStyle="normal"
                android:layout_margin="5dp"
                />


        </LinearLayout>
    </androidx.cardview.widget.CardView>




</LinearLayout>