<?xml version="1.0" encoding="utf-8"?>
<!--This layout made for plant requisite recycler view-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/plant_requisite_card"
        app:cardElevation="7dp"
        app:contentPadding="11dp"
        app:cardCornerRadius="7dp"
        >

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/cropImagePR"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="11dp"
            android:src="@drawable/ll"
            android:scaleType="centerCrop"
            android:contentDescription="@string/crop_image"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/tvCropNamePR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/crop_name"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_margin="4dp"
                />

            <TextView
                android:id="@+id/tvDeviceNamePR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_name"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_margin="4dp"
                />

            <TextView
                android:id="@+id/tvStatusPR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="status"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_margin="4dp"
                />


        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>