<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--This layout made for add crop recycler view-->

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addCrop_card"
        app:cardElevation="7dp"
        app:contentPadding="11dp"
        app:cardCornerRadius="7dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mCardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:backgroundTint="#fff"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:id="@+id/addCropImage"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_gravity="start"
                    android:src="@drawable/ll"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/addcropimage"
                    android:layout_margin="10dp"
                    />
            </com.google.android.material.card.MaterialCardView>




            <TextView
                android:id="@+id/tvAddCropName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/crop_name"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_toEndOf="@id/mCardView"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                />

            <TextView
                android:id="@+id/tvAddCropDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/crop_description"
                android:textSize="14sp"
                android:textStyle="normal"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_below="@id/mCardView"
                />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>