<?xml version="1.0" encoding="utf-8"?>


<!--This layout made for sensor recycler view-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginBottom="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/deviceModel_card"
        app:cardElevation="7dp"
        app:contentPadding="11dp"
        app:cardCornerRadius="7dp"
        android:layout_margin="10dp"
        >

<!--Left side fields-->

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/leftSideField"
            >

            <TextView
                android:id="@+id/tvDevice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sensor_id"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="11dp"
                android:layout_marginBottom="11dp"
                />

            <TextView
                android:id="@+id/tvCrop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/crop_name"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginBottom="11dp"
                />

            <TextView
                android:id="@+id/tvStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status_on_of"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginBottom="11dp"
                />


        </LinearLayout>
<!--Right side fields-->

        <LinearLayout
            android:id="@+id/rightSideField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toEndOf="@id/leftSideField"
            android:layout_marginStart="10dp"
            >

            <TextView
                android:id="@+id/tvDeviceNameDMS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Device 1"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="11dp"
                android:layout_marginBottom="11dp"
                />

            <TextView
                android:id="@+id/tvCropNameDMS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Jawar"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginBottom="11dp"
                />

            <TextView
                android:id="@+id/tvStatusDMS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="ON"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginBottom="11dp"
                />


        </LinearLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>




</LinearLayout>